adding missing endpoints and implementing external api communication